/* ══════════════════════════════════════════════════════════════════
 * NURI · FACTORY · RENDER SMOKE (react-test-renderer · headless · R1/R1.5)
 * ──────────────────────────────────────────────────────────────────
 * Mount each of the three frozen descriptors through the SAME factory, via
 * the ERGONOMIC 1:1 API (typed named props + children) → no-throw + a
 * committed snapshot of the rendered tree. The ongoing consumability guard
 * (decision 65.5 · X-wired) now that the hand-written mirrors are retired.
 *
 * The factory is glyph-AGNOSTIC: for the icon part it injects the scope
 * foreground as `color` into the provided element. We use a stand-in glyph
 * to test that injection in ISOLATION (the real glyph renderer is the
 * consumer's — see the demo screen) — keeping the smoke about the factory.
 * ══════════════════════════════════════════════════════════════════ */

import * as React from 'react';
import TestRenderer, { act } from 'react-test-renderer';
import { Text, View } from 'react-native';
import { NuriThemeProvider } from '../../theme';
import { Button, IconAvatar, IconButton, Topbar } from '../index';

const TestGlyph: React.FC<{ color?: string }> = ({ color }) => (
  <View accessibilityLabel={`glyph:${color ?? 'none'}`} />
);

function render(node: React.ReactElement): TestRenderer.ReactTestRenderer {
  let tr!: TestRenderer.ReactTestRenderer;
  act(() => {
    tr = TestRenderer.create(node);
  });
  return tr;
}

describe('render-smoke — the ergonomic components mount headless', () => {
  test('Button — typed named props · interactive (Pressable) · label children', () => {
    const tr = render(
      <NuriThemeProvider>
        <Button variant="solid" size="md" onPress={() => undefined}>
          Buy Bitcoin
        </Button>
      </NuriThemeProvider>,
    );
    expect(tr.toJSON()).toBeTruthy();
    expect(tr.toJSON()).toMatchSnapshot();
  });

  test('IconAvatar — static (View) · glyph children inherit the scope fg', () => {
    const tr = render(
      <NuriThemeProvider>
        <IconAvatar variant="soft">
          <TestGlyph />
        </IconAvatar>
      </NuriThemeProvider>,
    );
    // soft → surface.soft.fg = chrome.light.textPrimary (#222013): colour-by-scope
    // delivered the surface foreground into the glyph (§12 · F-BOX-FG-1).
    expect(tr.root.findByProps({ accessibilityLabel: 'glyph:#222013' })).toBeTruthy();
    expect(tr.toJSON()).toMatchSnapshot();
  });

  test('Topbar — COMPOUND slots · leading/center/trailing regions composed via sub-components', () => {
    const tr = render(
      <NuriThemeProvider>
        <Topbar>
          <Topbar.Leading><View accessibilityLabel="leading" /></Topbar.Leading>
          <Topbar.Center><Text>Account</Text></Topbar.Center>
          <Topbar.Trailing><View accessibilityLabel="trailing" /></Topbar.Trailing>
        </Topbar>
      </NuriThemeProvider>,
    );
    expect(tr.toJSON()).toBeTruthy();
    // each region's content rendered (the centre text + the two edge views).
    expect(tr.root.findByProps({ accessibilityLabel: 'leading' })).toBeTruthy();
    expect(tr.root.findByProps({ accessibilityLabel: 'trailing' })).toBeTruthy();
    expect(tr.root.findByType(Text).props.children).toBe('Account');
    expect(tr.toJSON()).toMatchSnapshot();
  });

  test('Topbar — BARE children default to the trailing region (the "just actions" slot)', () => {
    const tr = render(
      <NuriThemeProvider>
        <Topbar>
          <View accessibilityLabel="bare-action" />
        </Topbar>
      </NuriThemeProvider>,
    );
    expect(tr.toJSON()).toBeTruthy();
    expect(tr.root.findByProps({ accessibilityLabel: 'bare-action' })).toBeTruthy();
    expect(tr.toJSON()).toMatchSnapshot();
  });

  test('IconButton — BARE · the icon-anchored control · glyph routed via the `icon` prop · a11y name', () => {
    const tr = render(
      <NuriThemeProvider>
        <IconButton variant="solid" size="md" icon={<TestGlyph />} accessibilityLabel="Buy Bitcoin" onPress={() => undefined} />
      </NuriThemeProvider>,
    );
    expect(tr.toJSON()).toBeTruthy();
    // bare → the glyph renders (scope fg threaded in) with NO flank Text nodes
    // (the optional-flank collapse · so a stack gap never widens the round control).
    expect(tr.root.findAllByType(Text)).toHaveLength(0);
    expect(tr.toJSON()).toMatchSnapshot();
  });

  test('IconButton — FLANKED · prefix/suffix text flank the icon (`Buy Bitcoin 🍎 Pay`)', () => {
    const tr = render(
      <NuriThemeProvider>
        <IconButton variant="soft" prefix="Buy Bitcoin" icon={<TestGlyph />} suffix="Pay" onPress={() => undefined} />
      </NuriThemeProvider>,
    );
    expect(tr.toJSON()).toBeTruthy();
    // flanked → two Text flanks, in row order with the glyph between them.
    const texts = tr.root.findAllByType(Text).map((t) => t.props.children);
    expect(texts).toEqual(['Buy Bitcoin', 'Pay']);
    expect(tr.toJSON()).toMatchSnapshot();
  });

  test('accent self-scope (Tier-2) overrides ambient (F-SCOPE-2)', () => {
    // solid under a neutral self-scope inside a lilac ambient → the black solid
    // (#12110b) proves the prop won over the lilac context.
    const tr = render(
      <NuriThemeProvider mode="light" accent="lilac">
        <IconAvatar variant="solid" accent="neutral">
          <TestGlyph />
        </IconAvatar>
      </NuriThemeProvider>,
    );
    expect(JSON.stringify(tr.toJSON())).toContain('#12110b');
  });
});
